--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
               <p class="lead text-center">
                   Vi laddar upp för hösten, just nu är vi i full gång<br> att uppdatera vår hemsida.<br> Nyfiken på vad som händer bakom kulisserna?..<br>
                   Kika in på <a href="https://www.instagram.com/escandiproject/" > 
-                  <large class="text-muted">#escandiproject</large></a>  på instagram &<br> vår <a href="https://www.facebook.com/escandi-287883534650188/"><large class="text-muted">Facebook</large></a>  sida såklart!
+                  <large class="text-muted">#escandiproject</a></large> på instagram &<br> vår <a href="https://www.facebook.com/escandi-287883534650188/"><large class="text-muted">Facebook</a></large> sida såklart!
 
               </p>
            
