--- a/app/index.html
+++ b/app/index.html
@@ -97,15 +97,26 @@
             <br>0733916119</p>
           </div>  
 
-          <div class="col-md-2 text-center">
+          <div class="col-md-1 text-center">
             <p class="text-pink">
             <span class="glyphicon glyphicon-one-fine-dot"></span>admin     
             </p>
-          </div> 
+            
+          </div>
 
-          <div class="col-md-2 text-center">  
+          <div class="col-md-1 text-center">
+          <p>
             <a href="mailto:nina@escandi.se">nina@escandi.se</a>
             <br>0733912232
+            </p>
+          </div> 
+
+          <div class="col-md-2 text-center"> 
+            <p class="text-brown"> 
+            <span class="glyphicon glyphicon-one-fine-dot"></span>service 
+            <a href="mailto:arthur@escandi.se">arthur@escandi.se</a>
+            </p>
+            
           </div> 
         </div>
       </div>
